Removed file checks